infrastructure/dev/keycloak-operator/operator-staging-patch.yaml
---
# Patch for staging namespace operator
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-operator
  namespace: staging
spec:
  selector:
    matchLabels:
      app: keycloak-operator-staging
  template:
    metadata:
      labels:
        app: keycloak-operator-staging
    spec:
      serviceAccountName: keycloak-operator-staging
